--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Bakery</title>
+    <title>Wafer-thin</title>
+    <link rel="icon" href="icon_path" type="image/icon type">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,700">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
@@ -12,12 +13,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
     <link rel="stylesheet" href="assets/css/Pretty-Footer.css">
     <link rel="stylesheet" href="assets/css/styles.css">
+
+
 </head>
 
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
-            <div class="navbar-header"><a class="navbar-brand" href="#"><img src="assets/img/logo.png" id="logo"><strong>Mom &amp; Pop's</strong> Bakery</a><button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button></div>
+            <div class="navbar-header"><a class="navbar-brand" href="#"><img src="assets/img/logo.png" id="logo"><strong>wafer-thin</strong> Bakery</a><button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button></div>
             <div
                 class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav navbar-right">
@@ -31,15 +34,14 @@
     </nav>
     <div id="promo">
         <div class="jumbotron">
-            <h1>Fantastic Offer! </h1>
+            <h1>Fabulus Offer! </h1>
             <p>We have a special treat to our new customers. Order now and get a big discount on your first cake! </p>
-            <p><a class="btn btn-info btn-lg" role="button" href="#">Get 50% Off!</a></p>
+            <p><a class="btn btn-info btn-lg" role="button" href="#">Get 20% Off!</a></p>
         </div>
     </div>
     <div class="container site-section" id="welcome">
-        <h1>Welcome to Mom &amp; Pop's Bakery </h1>
-        <p>Mom &amp; Pop's Bakery was founded in Paris in 1993 with the mission of giving great cake to the world. Our dedication and tasty cakes have won us numerous awards. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean id purus ipsum.
-            </p>
+        <h1>Wafer-thin Bakery </h1>
+        <p>wafer-thin balery was founded in india in 2018 with the mission of giving great cake to the people. Our dedication and tasty cakes have won us numerous awards.</p>
     </div>
     <div class="dark-section">
         <div class="container site-section" id="why">
@@ -47,15 +49,15 @@
             <div class="row">
                 <div class="col-md-4 item"><i class="fa fa-birthday-cake"></i>
                     <h2>Great Taste </h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean id purus ipsum. Aliquam ac orci eleifend, aliquet felis nec.&nbsp; </p>
+                    <p>our foods have great Taste</p>
                 </div>
                 <div class="col-md-4 item"><i class="fa fa-heart"></i>
                     <h2>Healthy &amp; Organic</h2>
-                    <p>Quisque sagittis ligula massa, nec hendrerit felis mollis ultricies. In sagittis semper condimentum.&nbsp; </p>
+                    <p>our products are healthy and hygenic </p>
                 </div>
                 <div class="col-md-4 item"><i class="fa fa-shopping-basket"></i>
                     <h2>Next Day Delivery</h2>
-                    <p>Aliquam ac orci eleifend, aliquet felis nec, commodo elit. Quisque sagittis ligula massa, nec hendrerit felis mollis ultricies.&nbsp; </p>
+                    <p>one day delivery for regular customers.&nbsp; </p>
                 </div>
             </div>
         </div>
@@ -78,26 +80,26 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4 col-sm-6 footer-navigation">
-                    <h3><a href="#">Mom &amp; Pop's Bakery</a></h3>
+                    <h3><a href="#">wafer-thin Bakery</a></h3>
                     <p class="links"><a href="#">Cakes </a><strong> · </strong><a href="#">Pricing </a><strong> · </strong><a href="#">Order </a><strong> </strong></p>
-                    <p class="company-name">Mom &amp; Pop's Bakery © 2016 </p>
+                    <p class="company-name">wafer-thin © 2019 </p>
                 </div>
                 <div class="col-md-4 col-sm-6 footer-contacts">
                     <div><span class="fa fa-map-marker footer-contacts-icon"> </span>
-                        <p><span class="new-line-span">21 Revolution Street</span> Paris, France</p>
+                        <p><span class="new-line-span">20/24,sathyamoorthy street</span> erode, tamilnadu</p>
                     </div>
                     <div><i class="fa fa-phone footer-contacts-icon"></i>
-                        <p class="footer-center-info email text-left"> +1 555 123456</p>
+                        <p class="footer-center-info email text-left"> 9360026348</p>
                     </div>
                     <div><i class="fa fa-envelope footer-contacts-icon"></i>
-                        <p> <a href="#" target="_blank">support@company.com</a></p>
+                        <p> <a href="#" target="_blank">dhanraj.m@nandhaengg.org</a></p>
                     </div>
                 </div>
                 <div class="clearfix visible-sm-block"></div>
                 <div class="col-md-4 footer-about">
-                    <h4>About the company</h4>
-                    <p> Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit, eu auctor lacus vehicula sit amet. </p>
-                    <div class="social-links social-icons"><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-linkedin"></i></a><a href="#"><i class="fa fa-github"></i></a></div>
+                    <h4>proprietor</h4>
+                    <p>Raj_Raj_dk</p>
+                    <div class="social-links social-icons"><a href="https://www.facebook.com/d.raj.395"><i class="fa fa-facebook"></i></a><a href="https://www.linkedin.com/in/dhanraj-m-913097190/"><i class="fa fa-linkedin"></i></a><a href="https://github.com/rajrajdk"><i class="fa fa-github"></i></a><a href="https://www.instagram.com/raj_raj_dk/?hl=en"><i class="fa fa-instagram"></i></a></div>
                 </div>
             </div>
         </div>
